# ai-projects

./: .env.example  .gitignore  README.md  pyproject.toml
RAG-ecommerce-qa/: .gitignore  CLAUDE.md  README.md  api.py  requirements.txt
RAG-ecommerce-qa/data/: custom_data.txt  custom_qa.json
RAG-ecommerce-qa/docs/: RAG技术详解.md  三大核心流程详解.md  技术总结-答辩版.md  用户手册.txt
RAG-ecommerce-qa/scripts/: data_loader.py  import_data.py  init_knowledge_base.py  process_brand_data.py  process_custom_data.py
RAG-ecommerce-qa/src/: __init__.py  document_parser.py  embedder.py  retriever.py  vector_store.py
RAG-ecommerce-qa/static/: index.html
app/: config.py
app/agent/: Qwen_agent.py  coze_agent.py
app/models/: __init__.py
app/routers/: __init__.py  create.py  test.py  xhs.py
operation/: main.py
operation/app/: database.py
operation/app/routers/: auth.py
operation/app/until/: upload.py  xhs_publish.py
operation/migrations/models/: 0_20260502195015_init.py
operation/operation_ui/: .env.example
operation/operation_ui/src/utils/: xiaohongshu.js
operation/operation_ui/src/views/: CreatePublish.vue  (+5 more)
operation_ui/: index.html  package-lock.json  package.json  pnpm-lock.yaml  project.md  vite.config.ts
operation_ui/scripts/: publish-xiaohongshu.mjs
operation_ui/src/: main.js
operation_ui/src/apis/: index.js  request.js
operation_ui/src/config/: enums.js  index.js
operation_ui/src/router/: index.js
operation_ui/src/store/: userStore.js
operation_ui/src/utils/: cookie.js  handleError.js
operation_ui/src/views/: Login.vue  XiaohongshuSettings.vue
