[project]
name = "operation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aerich[toml]>=0.9.2",
    "alibabacloud-oss-v2>=1.2.4",
    "cozepy>=0.20.0",
    "dashscope>=1.25.12",
    "fastapi>=0.129.2",
    "openai>=2.21.0",
    "oss2>=2.18.0",
    "playwright>=1.60.0",
    "pyjwt>=2.8.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.22",
    "tortoise-orm[asyncmy]>=0.20.0",
    "uvicorn>=0.41.0",
    "xhs>=0.2.13",
]

[tool.aerich]
tortoise_orm = "app.config.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."

[dependency-groups]
dev = [
    "black>=26.3.1",
]
